tests/errors/unclosed-interpolation/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0025]: Unexpected end of file. Expected a ')'.
  │
1 │ def msg = "n = $(to-string 1"
  │ ^
  ╰─𜱶 tests/errors/unclosed-interpolation/main.pa:1:1

error[E0017]: Unclosed string interpolation.
  │
  ├─𜱶 help: close the interpolation with `)`, e.g. `"n = $(to-string n)"`.
  │
1 │ def msg = "n = $(to-string 1"
  │                ^^^^^^^^^^^^^^^
  ╰─𜱶 tests/errors/unclosed-interpolation/main.pa:1:16

error[E0018]: Unclosed string.
  │
  ├─𜱶 help: add a closing `"`.
  │
1 │ def msg = "n = $(to-string 1"
  │                             ^
  ╰─𜱶 tests/errors/unclosed-interpolation/main.pa:1:29
